# brainstem

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: adr044_explainer_spotcheck.py  ua_codegraph_ext.py
src/wiki_agent/: __init__.py  __main__.py  agent.py  brainstem_cli.py  cli.py  doctor.py  fetch_cli.py  integrations_cli.py  mcp_server.py  middleware.py  prompts.py  recall_cli.py  router_cli.py  search_adapter.py  state.py  tools.py  write_sink.py
src/wiki_autofetch/: __init__.py  dlq.py  lockfile.py  metrics.py  rate_limiter.py  scheduler.py  tick.py  worker.py
src/wiki_compress/: __init__.py  metrics.py  pipeline.py
src/wiki_core/: __init__.py  observability.py  protocols.py
src/wiki_ingest/: __init__.py  adapter.py  composition.py  config.py  daemon.py  filters.py  models.py  pagewrite.py  paper_prepass.py  queue.py  security.py  watcher.py  worker.py
src/wiki_integrations/: __init__.py  base.py  composio_bridge.py  cursor_store.py  registry.py
src/wiki_lessons/: __init__.py  distill.py  lifecycle.py  page.py  retrieve.py  verdict.py
src/wiki_memory/: __init__.py  chunker.py  content_store.py  embedder.py  recall.py  scoring.py  seal_hook.py  seal_worker.py  summariser.py  summariser_factory.py  tree_nodes.py
src/wiki_papers/: __init__.py  arxiv.py  cli.py  extract.py
src/wiki_publishing/: __init__.py  explainer_quality.py  linkedin_draft.py  linkedin_publish.py  post_types.py  project_context_source.py  project_ledger.py  repo_context_source.py  web_context_source.py  wiki_content_source.py
src/wiki_qa/: __init__.py  baseline.py  cli.py  codegraph.py  codequery.py  graph.py  linter.py  tour.py
src/wiki_repos/: __init__.py  cbm_adapter.py  cbm_runner.py  codegraph_runner.py  diagram.py  digest.py  errors.py  fetcher.py  github_meta.py  graphview.py  history.py  quality.py  render.py  repo_context.py  service.py  synthesize.py  types.py
src/wiki_routing/: __init__.py  config.py  cost_ceiling.py  factory.py  fallback.py  policy.py  router.py  router_summariser.py  telemetry.py  tiers.py
src/wiki_synthesis/: __init__.py  agent.py  body_quality.py  extractors.py  hooks.py  paper_distill.py  reconcile.py  structured.py  templates.py
tests/: conftest.py  eval-suite.yaml  test_agent.py  test_e2e.py  test_new_tools.py  test_prompts.py  test_setup.py  test_state.py  test_tools.py
tests/benchmarks/: conftest.py  test_seal_perf.py  test_search_perf.py
tests/evals_m3_7/: conftest.py  test_scenarios.py
tests/publishing/: test_adr044_explainer_and_cta.py  test_adr044_spotcheck.py  test_explainer_quality.py  test_linkedin_draft.py  test_linkedin_publish.py  test_post_types.py  test_project_context_source.py  test_project_ledger.py  test_repo_context_source.py  test_web_context_source.py
tests/security/: conftest.py  test_audit_log_redaction.py  test_integrations_cli.py  test_no_plaintext_secrets.py  test_revocation.py  test_scope_policy_locked.py  test_secret_store.py
tests/wiki_agent/: __init__.py  test_adr044_mcp_cta.py  test_brainstem_cli.py  test_compressing_write_sink.py  test_m25_tombstone_recall.py  test_mcp_ask_repo.py  test_mcp_e2e_stdio.py  test_mcp_ingest_arxiv.py  test_mcp_linkedin_draft.py  test_mcp_linkedin_publish.py  test_mcp_memory_tree.py  test_mcp_readonly.py  test_quality_wiring.py  test_recall_cli.py
tests/wiki_autofetch/: conftest.py  test_dlq.py  test_lockfile.py  test_metrics.py  test_rate_limiter.py  test_scheduler.py  test_tick.py  test_worker.py
tests/wiki_compress/: test_dedupe.py  test_email_quotes.py  test_html_to_markdown.py  test_line_dedupe.py  test_pipeline.py  test_pipeline_presets.py  test_preserve.py  test_url_shorten.py  test_whitespace_normalise.py
tests/wiki_core/: conftest.py  test_observability.py  test_protocols.py  test_rate_limiter_protocol.py  test_search_adapter.py  test_sqlite_memory_store.py  test_write_sink.py
tests/wiki_ingest/: conftest.py  test_composition_seal_hook.py  test_composition_synthesis_hook.py  test_daemon_autofetch.py  test_daemon_oneshot.py  test_e2e.py  test_factory_current.py  test_filters.py  test_filters_current.py  test_queue.py  test_security.py  test_security_current.py  test_watcher.py  test_worker.py  test_worker_current.py  test_worker_papers.py
tests/wiki_integrations/: conftest.py  test_base.py  test_composio_bridge.py  test_cursor_store.py  test_provider_cursors.py  test_providers_github.py  test_providers_gmail.py  test_registry.py
tests/wiki_lessons/: test_distill.py  test_lifecycle.py  test_page.py  test_retrieve.py  test_verdict.py
tests/wiki_memory/: conftest.py  test_chunker.py  test_content_store.py  test_embedder_and_vector.py  test_m25_recall_scoring.py  test_m25_reuse_and_citations.py  test_m25_supersession.py  test_recall.py  test_scoring.py  test_seal_hook.py  test_seal_worker.py  test_summariser.py  test_summariser_factory.py  test_tree_nodes.py
tests/wiki_papers/: conftest.py  test_arxiv.py  test_cli.py  test_extract.py
(+91 files in other folders)
