[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainstem-mcp"
version = "0.3.0"
description = "Brainstem — local-first knowledge backend for AI agents. Connect any MCP host (Claude Code, Cursor) to an Obsidian-compatible wiki with indexed retrieval, token-budgeted recall, and secure ingestion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DarkCodePE" }]
keywords = ["knowledge-base", "obsidian", "deep-agents", "langgraph", "mcp", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "deepagents>=0.5.3,<0.6",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "langgraph-checkpoint-sqlite",
    "fastembed>=0.4.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "markdownify>=0.14.0",
    "pypdf>=4.0",
    "mcp>=1.2.0",
    "watchdog>=4.0",
    "click>=8.1",
    "keyring>=24.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.3.0"]
ingest = [
    # wiki_ingest needs no extra runtime deps beyond core; pinned for clarity
]
# Optional observability exporters (#133). Install with
# ``pip install -e .[observability]`` when wiring Sentry or OTLP.
observability = [
    "sentry-sdk>=2.0",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-benchmark>=5.0",
    "diff-cover>=9.0",
    "ruff>=0.8.0",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/DarkCodePE/second-brain-wiki"
Issues = "https://github.com/DarkCodePE/second-brain-wiki/issues"
Roadmap = "https://github.com/DarkCodePE/second-brain-wiki/blob/main/docs/swarm-investigation/2026-05-22-openhuman-vs-sbw/backlog/ROADMAP.md"

[project.scripts]
brainstem = "wiki_agent.brainstem_cli:main"
sbw = "wiki_agent.cli:main"
sbw-doctor = "wiki_agent.doctor:main"
wiki-agent = "wiki_agent.cli:main"
wiki-mcp = "wiki_agent.mcp_server:main"
sbw-ingest = "wiki_ingest.daemon:main"
sbw-wiki-qa = "wiki_qa.cli:main"
sbw-ingest-paper = "wiki_papers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wiki_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "openhuman",
    "hermes-agent",
    "ruflo",
    "kb-wiki",
    "graphify",
    "claude-memory-compiler",
    "rowboat",
    "tolaria",
    "andrej-karpathy-skills",
    "langchain-skills",
    "claude-code-patterns",
    "agentmemory",
    "BHIL-AI-First-Development-Toolkit",
    "knowledge-base",
    ".venv",
    "src/.venv",
]

[tool.ruff.lint]
# Sprint 1 baseline: structural rules only (imports, naming, syntax, deprecated patterns).
# Sprint 2 of M1 will widen to B (bugbear), SIM (simplify), RUF (ruff-specific)
# after a targeted refactor pass — see issue #61.
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"docs/**" = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = [
    "openhuman/",
    "hermes-agent/",
    "ruflo/",
    "kb-wiki/",
    "graphify/",
    "claude-memory-compiler/",
    "rowboat/",
    "tolaria/",
    "andrej-karpathy-skills/",
    "langchain-skills/",
    "claude-code-patterns/",
    "agentmemory/",
    "BHIL-AI-First-Development-Toolkit/",
    "knowledge-base/",
    ".venv/",
    "src/.venv/",
]

[[tool.mypy.overrides]]
module = [
    "deepagents.*",
    "fastembed.*",
    "langgraph_checkpoint_sqlite.*",
    "markdownify.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --tb=short --benchmark-skip"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "benchmark: performance benchmarks (run with --benchmark-only)",
    "network: live tests that hit external APIs (skip offline; deselect with '-m \"not network\"')",
]

[tool.coverage.run]
source = ["src/wiki_agent", "src/wiki_ingest"]
omit = ["*/tests/*", "*/test_*.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
